--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.18.0",
-    "react-native-reanimated-carousel": "^4.0.2"
+    "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-safe-area-context": "^5.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
