--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-vector-icons/common": "^12.0.1",
+    "@react-native-vector-icons/fontawesome5": "^12.0.1",
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/elements": "^2.4.4",
     "@react-navigation/native": "^7.1.11",
@@ -25,7 +27,8 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
