--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-vector-icons/common": "^12.0.1",
+    "@react-native-vector-icons/fontawesome5": "^12.0.1",
+    "@react-navigation/bottom-tabs": "^7.3.15",
+    "@react-navigation/elements": "^2.4.4",
+    "@react-navigation/native": "^7.1.11",
+    "@react-navigation/native-stack": "^7.3.16",
+    "@react-navigation/stack": "^7.3.4",
     "axios": "^1.9.0",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.18.0",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-safe-area-context": "^5.4.1"
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
