config: added keystroke and sign for the play store

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,20 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+
+# ================================================
+# 🔐 Keystore properties for signing release APKs
+# ================================================
+
+# DO NOT share this file with anyone or commit it to public GitHub repos
+# Make sure your keystore file is inside the `android/` folder
+
+MYAPP_UPLOAD_STORE_FILE=academia-release-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+
+# ⛔ Replace the values below with the real passwords you used
+# when you created the keystore via the keytool command
+
+MYAPP_UPLOAD_STORE_PASSWORD=123456
+MYAPP_UPLOAD_KEY_PASSWORD=123456
