--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
