--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-vector-icons/common": "^12.0.1",
     "@react-native-vector-icons/fontawesome5": "^12.0.1",
@@ -44,6 +45,7 @@
     "@react-native/typescript-config": "0.79.3",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
